# unstract-adapters

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/unstract/adapters/: __init__.py  adapterkit.py  base.py  constants.py  enums.py  exceptions.py  registry.py  utils.py
src/unstract/adapters/embedding/: __init__.py  embedding_adapter.py  helper.py  register.py
src/unstract/adapters/embedding/azure_open_ai/: README.md  pyproject.toml
src/unstract/adapters/embedding/azure_open_ai/src/: azure_open_ai.py
src/unstract/adapters/embedding/azure_open_ai/src/static/: json_schema.json
src/unstract/adapters/embedding/hugging_face/: pyproject.toml
src/unstract/adapters/embedding/hugging_face/src/: __init__.py  hugging_face.py
src/unstract/adapters/embedding/hugging_face/src/static/: json_schema.json
src/unstract/adapters/embedding/ollama/: README.md  pyproject.toml
src/unstract/adapters/embedding/ollama/src/: ollama.py
src/unstract/adapters/embedding/ollama/src/static/: json_schema.json
src/unstract/adapters/embedding/open_ai/: README.md  pyproject.toml
src/unstract/adapters/embedding/open_ai/src/: open_ai.py
src/unstract/adapters/embedding/open_ai/src/static/: json_schema.json
src/unstract/adapters/embedding/palm/: pyproject.toml
src/unstract/adapters/embedding/palm/src/: palm.py
src/unstract/adapters/embedding/palm/src/static/: json_schema.json
src/unstract/adapters/embedding/qdrant_fast_embed/: pyproject.toml
src/unstract/adapters/embedding/qdrant_fast_embed/src/: __init__.py  qdrant_fast_embed.py
src/unstract/adapters/embedding/qdrant_fast_embed/src/static/: json_schema.json
src/unstract/adapters/llm/: __init__.py  constants.py  helper.py  llm_adapter.py  register.py
src/unstract/adapters/llm/anthropic/: README.md  pyproject.toml
src/unstract/adapters/llm/anthropic/src/: __init__.py  anthropic.py
src/unstract/adapters/llm/anthropic/src/static/: json_schema.json
src/unstract/adapters/llm/any_scale/: pyproject.toml
src/unstract/adapters/llm/any_scale/src/: __init__.py  anyscale.py
src/unstract/adapters/llm/any_scale/src/static/: json_schema.json
src/unstract/adapters/llm/azure_open_ai/: README.md  pyproject.toml
src/unstract/adapters/llm/azure_open_ai/src/: __init__.py  azure_open_ai.py
src/unstract/adapters/llm/azure_open_ai/src/static/: json_schema.json
src/unstract/adapters/llm/mistral/: README.md  pyproject.toml
src/unstract/adapters/llm/mistral/src/: __init__.py  mistral.py
src/unstract/adapters/llm/mistral/src/static/: json_schema.json
src/unstract/adapters/llm/ollama/: README.md  pyproject.toml
src/unstract/adapters/llm/ollama/src/: __init__.py  ollama.py
src/unstract/adapters/llm/ollama/src/static/: json_schema.json
src/unstract/adapters/llm/open_ai/: README.md  pyproject.toml
src/unstract/adapters/llm/open_ai/src/: __init__.py  open_ai.py
src/unstract/adapters/llm/open_ai/src/static/: json_schema.json
src/unstract/adapters/llm/palm/: README.md  pyproject.toml
src/unstract/adapters/llm/palm/src/: __init__.py  palm.py
src/unstract/adapters/llm/palm/src/static/: json_schema.json
src/unstract/adapters/llm/replicate/: README.md  pyproject.toml
src/unstract/adapters/llm/replicate/src/: __init__.py  replicate.py
src/unstract/adapters/llm/replicate/src/static/: json_schema.json
src/unstract/adapters/llm/vertex_ai/: README.md  pyproject.toml
src/unstract/adapters/llm/vertex_ai/src/: __init__.py  vertex_ai.py
src/unstract/adapters/llm/vertex_ai/src/static/: json_schema.json
src/unstract/adapters/ocr/: __init__.py  ocr_adapter.py  register.py
src/unstract/adapters/ocr/google_document_ai/: pyproject.toml
src/unstract/adapters/ocr/google_document_ai/src/: google_document_ai.py
src/unstract/adapters/ocr/google_document_ai/src/static/: json_schema.json
src/unstract/adapters/vectordb/: __init__.py  constants.py  helper.py  register.py  vectordb_adapter.py
src/unstract/adapters/vectordb/__supabase/: pyproject.toml
src/unstract/adapters/vectordb/__supabase/src/: supabase.py
src/unstract/adapters/vectordb/milvus/: pyproject.toml
src/unstract/adapters/vectordb/milvus/src/: milvus.py
src/unstract/adapters/vectordb/milvus/src/static/: json_schema.json
src/unstract/adapters/vectordb/pinecone/: pyproject.toml
src/unstract/adapters/vectordb/pinecone/src/: pinecone.py
src/unstract/adapters/vectordb/pinecone/src/static/: json_schema.json
src/unstract/adapters/vectordb/postgres/: pyproject.toml
src/unstract/adapters/vectordb/postgres/src/: postgres.py
src/unstract/adapters/vectordb/postgres/src/static/: json_schema.json
src/unstract/adapters/vectordb/qdrant/: pyproject.toml
src/unstract/adapters/vectordb/qdrant/src/: __init__.py  qdrant.py
src/unstract/adapters/vectordb/qdrant/src/static/: json_schema.json
src/unstract/adapters/vectordb/supabase/: README.md  pyproject.toml
src/unstract/adapters/vectordb/supabase/src/: __init__.py  supabase.py
src/unstract/adapters/vectordb/supabase/src/static/: json_schema.json
src/unstract/adapters/vectordb/weaviate/: pyproject.toml
src/unstract/adapters/vectordb/weaviate/src/: weaviate.py
src/unstract/adapters/vectordb/weaviate/src/static/: json_schema.json
src/unstract/adapters/x2text/: __init__.py  constants.py  dto.py  helper.py  register.py  x2text_adapter.py
src/unstract/adapters/x2text/llama_parse/: pyproject.toml
src/unstract/adapters/x2text/llama_parse/src/: __init__.py  constants.py  llama_parse.py
src/unstract/adapters/x2text/llama_parse/src/static/: json_schema.json
src/unstract/adapters/x2text/llm_whisperer/: README.md  pyproject.toml
src/unstract/adapters/x2text/llm_whisperer/src/: constants.py  llm_whisperer.py
src/unstract/adapters/x2text/llm_whisperer/src/static/: json_schema.json
src/unstract/adapters/x2text/unstructured_community/: pyproject.toml
src/unstract/adapters/x2text/unstructured_community/src/: unstructured_community.py
src/unstract/adapters/x2text/unstructured_enterprise/src/: unstructured_enterprise.py
(+2 files in other folders)
