[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "unstract-adapters"
dynamic = ["version"]
description = "Unstract interface for LLMs, Embeddings and VectorDBs"
dependencies = [
        "llama-index==0.10.23",
        "llama-index-embeddings-google==0.1.4",
        "llama-index-embeddings-azure-openai==0.1.6",
        "llama-index-embeddings-fastembed==0.1.4",
        # llama-index itself has a dependency on open-ai.
        # Hence not explicitly pinning any version
#        "llama-index-embeddings-openai==0.1.7",
        "llama-index-embeddings-huggingface==0.2.0",
        "llama-index-embeddings-azure-openai==0.1.6",
        "llama-index-vector-stores-postgres==0.1.3",
        # Including Supabase conflicts with postgres on pg-vector.
        # Hence, commenting it out at the moment
#        "llama-index-vector-stores-supabase==0.1.3",
        "llama-index-vector-stores-milvus==0.1.6",
        "llama-index-vector-stores-weaviate==0.1.4",
        "llama-index-vector-stores-pinecone==0.1.4",
        "llama-index-vector-stores-qdrant==0.1.4",
        "llama-index-llms-palm==0.1.4",
        "llama-index-llms-mistralai==0.1.10",
        "llama-index-llms-anyscale==0.1.3",
        "llama-index-llms-anthropic==0.1.5",
        "llama-index-llms-openai==0.1.8",
        "llama-index-llms-azure-openai==0.1.5",
        "llama-index-llms-vertex==0.1.5",
        "llama-index-llms-replicate==0.1.3",
        # OCR
        "filetype~=1.2.0",
]
readme = "README.md"
urls = { Homepage = "https://unstract.com", "Release notes" = "https://github.com/Zipstack/unstract-adapters/releases", Source = "https://github.com/Zipstack/unstract-adapters" }
license = {text = "AGPL v3"}
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
requires-python = ">=3.9,<3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.pdm.version]
source = "file"
path = "src/unstract/adapters/__init__.py"

[tool.pdm.dev-dependencies]
lint = [
    "absolufy-imports~=0.3.1",
    "autopep8~=2.0.2",
    "black~=24.3.0",
    "docutils~=0.20.1",
    "flake8~=7.0.0",
    "flake8-pyproject~=1.2.2",
    "isort~=5.13.2",
    "mypy~=1.9.0",
    "pre-commit~=3.6.2",
    "types-PyMySQL~=1.1.0.1",
    "types-pyOpenSSL~=24.0.0.20240311",
    "types-PyYAML~=6.0.12.12",
    "types-redis~=4.6.0.3",
    "types-requests~=2.31.0.6",
    "types-tzlocal~=5.1.0.1",
    "yamllint>=1.35.1",
]

[tool.pdm.build]
includes = ["src"]
package-dir = "src"
# source-includes = ["tests"]
